--- a/buildspec.yml
+++ b/buildspec.yml
@@ -7,7 +7,7 @@ env:
 phases:
   install:
     runtime-versions:
-      java: openjdk8
+      java: corretto8
     commands:
     - echo installing maven...
     - apt-get update -y
